fix element alignment styles

--- a/src/.vuepress/theme/styles/globals/_markdown.scss
+++ b/src/.vuepress/theme/styles/globals/_markdown.scss
@@ -10,7 +10,7 @@
 
   p {
     word-wrap: break-word;
-    margin-bottom: 40px;
+    margin: 40px 0;
 
     code {
       @apply text-sm bg-light-200 text-textLight font-bold;
@@ -30,7 +30,7 @@
     line-height: 1.58em;
   }
 
-  h1, h2, h3, h4, h5, h6, ol, ul, table, figure { margin-bottom: 1.2em; }
+  // h1, h2, h3, h4, h5, h6, ol, ul, table, figure { margin-bottom: 1.2em; }
   
   h1, h4, h5, h6 {
     .header-anchor {
@@ -63,8 +63,6 @@
   h3 {
     font-size: 30px;
     line-height: 1.10em;
-    margin-top: 50px;
-    margin-bottom: 20px;
     font-weight: bold;
   }
 
@@ -133,7 +131,7 @@
 
   ol, ul {
     padding-left: 2em;
-    margin-top: 40px;
+    margin-top: 30px;
     margin-bottom: 40px;
 
     li:not(:last-child) {
@@ -251,6 +249,7 @@
     border-radius: 0.7rem;
     white-space: normal;
   }
+
   .token.block-comment,.token.cdata,.token.comment,.token.doctype,.token.prolog { color:#999 }
   .token.punctuation { color:#ccc }
   .token.attr-name,.token.deleted,.token.namespace,.token.tag { color:#E58A85}
@@ -288,7 +287,6 @@
   .custom-block {
     &-obs, &-bq {
       @apply px-10 py-8 border-solid border-accent;
-      margin-bottom: 45px;
       border-left-width: 2px;
       
       p {
@@ -332,6 +330,7 @@
 
   .figurecode {
     position: relative;
+    margin-bottom: 40px;
 
     &__content {
       position: relative;
